@@ -328,15 +328,14 @@ struct colAttrs {
 
 #define PG_STAT_REPLICATION_QUERY \
     "SELECT \
-        client_addr as client, usename as user, application_name as name, \
-        state, sync_state as mode, \
-        (pg_xlog_location_diff(sent_location, '0/0') / 1024)::bigint as sent, \
-        (pg_xlog_location_diff(write_location, '0/0') / 1024)::bigint as write, \
-        (pg_xlog_location_diff(flush_location, '0/0') / 1024)::bigint as flush, \
-        (pg_xlog_location_diff(replay_location, '0/0') / 1024)::bigint as replay, \
-        (pg_xlog_location_diff(sent_location,replay_location) / 1024)::bigint as lag \
-    FROM pg_stat_replication \
-    ORDER BY client_addr"
+        client_addr AS client, usename AS user, application_name AS name, \
+        state, sync_state AS mode, \
+	(pg_xlog_location_diff(pg_current_xlog_location(),sent_location) / 1024)::int as pending, \
+	(pg_xlog_location_diff(sent_location,write_location) / 1024)::int as write, \
+	(pg_xlog_location_diff(write_location,flush_location) / 1024)::int as flush, \
+	(pg_xlog_location_diff(flush_location,replay_location) / 1024)::int as replay, \
+	(pg_xlog_location_diff(pg_current_xlog_location(),replay_location))::int / 1024 as total_lag \
+    FROM pg_stat_replication"
 
 #define PG_STAT_REPLICATION_ORDER_MIN 5
 #define PG_STAT_REPLICATION_ORDER_MAX 9
